feat(domain): 우승자 리스트 문자열 반환 기능 추가